crates/rtd-display/src/v2/snapshots/rtd_display__v2__parser__tests__all_text.snap
---
source: crates/rtd-display/src/v2/parser.rs
expression: "strands(r#\"foo bar\"#)"
---
"foo bar"
