crates/rtd-display/src/v2/snapshots/rtd_display__v2__parser__tests__byte_literal_whitespace.snap
---
source: crates/rtd-display/src/v2/parser.rs
expression: "strands(r#\"{b 'foo'}\"#)"
---
Error: Unexpected whitespace followed by string "foo" at byte offset 4, expected one of ':', '|', or '}'
